# chronotopia

./: .env  .gitignore  BEFORE-DOING-ANYTHING-READ-ME.md  Cargo.toml  Makefile  build.rs  direct_connection_test.geojson  rustc-ice-2025-04-06T23_16_03-315188.txt  rustc-ice-2025-04-17T22_47_36-660726.txt  rustc-ice-2025-04-17T22_47_46-660976.txt  rustc-ice-2025-04-17T22_48_16-661705.txt  rustc-ice-2025-04-17T22_48_22-661878.txt  rustc-ice-2025-04-17T22_49_25-663378.txt  rustc-ice-2025-04-17T22_51_34-666515.txt  rustc-ice-2025-04-17T22_51_44-666767.txt  rustc-ice-2025-04-17T22_51_51-666940.txt  rustc-ice-2025-04-17T22_52_11-667446.txt  rustc-ice-2025-04-17T22_57_49-676120.txt  rustc-ice-2025-04-17T22_57_55-676265.txt  rustc-ice-2025-04-17T23_05_00-687090.txt  rustc-ice-2025-04-17T23_09_08-693719.txt
app/: README.md  pubspec.yaml
app/ios/: Podfile
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
devenv/: docker-compose.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
proto/: buf.gen.yaml  chronotopia.proto  common.proto  datetime.proto  ingest.proto  trips.proto  user_management.proto
src/: auth.rs  debug.rs  ingest.rs  intersection_processor.rs  io.rs  main.rs  mapmatcher.rs  osm_preprocessing.rs  route_matcher.rs  route_matcher.rs.b  route_matcher.rs.c  routing.rs  tile_loader.rs  trip_builder.rs  trip_processor.rs  trips.rs  user_management.rs
src/entity/: device_metadata.rs  import_summary.rs  ingest_batches.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  spatial_ref_sys.rs  trips.rs  user_activity_ingest.rs  user_locations_ingest.rs  user_processing_state.rs  user_visits_ingest.rs  users.rs
web/: RouteDebugger.vue  app.vue  app.vue.b  eslint.config.mjs  nuxt.config.ts  package.json
web/components/: GoogleTimelineUploader.vue  StreetsGL.client.vue  TexturedSectionHeader.vue
web/composables/: api.ts
web/model/: chronotopia_connect.ts  chronotopia_pb.ts  common_connect.ts  common_pb.ts  (+7 more)
(+54 files in other folders)
