[package]
name = "chronotopia"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.97"
tonic = { version = "*", features = ["tls-webpki-roots"] }
tonic-web = "0.13.0"
prost = "0.13"
prost-types = "0.13.5"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"]}
http = "1.3.1"
reqwest = { version = "0.12.15", features = ["rustls-tls"] }
geo = "0.30.0"
osmpbf = "0.3.5"
rstar = "0.12.2"
petgraph = "0.8.0"
ordered-float = "5.0.0"
log = "0.4.27"
rayon = "1.10.0"
env_logger = "0.11.7"
geo-types = { version = "0.7", features = ["serde"] }
ndarray = "0.16.1"
bincode = { version = "2.0.1", features = ["serde"] }
indicatif = "0.17.11"
migration = { path = "migration" }
sea-orm = "1.1.8"
wkt = { version = "0.12.0", features = ["serde"] }
argon2 = "0.5.3"
email_address = "0.2.9"
rand = "0.9.0"
uuid = "1.16.0"

[build-dependencies]
tonic-build = "*"

[workspace]
members = [".", "migration"]
